# ProjectPenney1

./: Main.py  ProjectPenney#1.ipynb  ProjectPenney.ipynb  README.md  pyproject.toml  test.py
src/: ProjectPenney1.ipynb  datagen (2).py  datagen (3).py  datagen.py  helpers (1).py  helpers.py  main.py  processing.py  test.py  visualization.py
stored_results/: results_results (2).csv  results_results.csv
